# Effie2D

./: .gitmodules  CMakeLists.txt  CMakePresets.json  main.cpp  vcpkg.json
Common/: CMakeLists.txt
Common/include/Effie/: CommonDefines.h  CommonIncludes.h  InitSystem.h  Utilities.h
Common/src/: InitSystem.cpp  Utilities.cpp
Graphics/: CMakeLists.txt
Graphics/include/Effie/: BasicRenderer.h  DescriptorSet.h  RenderBuffer.h  RenderContext.h  RenderDevice.h  RenderPipeline.h  ShaderReflection.h  SpirvHelper.h
Graphics/src/: BasicRenderer.cpp  DescriptorSet.cpp  RenderBuffer.cpp  RenderDevice.cpp  RenderPipeline.cpp  ShaderReflection.cpp  SpirvHelper.cpp
Scene/: CMakeLists.txt
Scene/include/Effie/: RenderWindow.h  World.h
Scene/src/: RenderWindow.cpp  World.cpp
Shaders/Fragment/: QuadFragment.glsl  Sample1.glsl  Sample1.wgsl
Shaders/Vertex/: Sample1.glsl  Sample1.wgsl
cmake/: Common.cmake
